--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.5.0",
     "multiselect-react-dropdown": "1.4.7",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
@@ -39,7 +40,10 @@
     "typescript": "3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "clientstart": "react-scripts start",
+    "serverstart": "cd server && npm start",
+    "start": "run-p serverstart clientstart ",
+    "install": "cd server && npm install",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
