--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@material-ui/core": "4.9.9",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
+    "@types/react-transition-group": "^4.2.4",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "jquery.are-you-sure": "^1.9.0",
     "multiselect-react-dropdown": "1.4.7",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
@@ -42,7 +44,7 @@
   "scripts": {
     "clientstart": "react-scripts start",
     "serverstart": "cd server && npm start",
-    "start": "run-p serverstart clientstart ",
+    "start": "run-p serverstart clientstart",
     "install": "cd server && npm install",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
